[gd_scene load_steps=2 format=3 uid="uid://l762pn4pel86"]

[ext_resource type="Script" path="res://lib/BlinkEffect.gd" id="1_cypy5"]

[node name="BlinkEffect" type="Node"]
script = ExtResource("1_cypy5")

[node name="DurationTimer" type="Timer" parent="."]

[node name="BlinkTimer" type="Timer" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
